--- a/vera-website/index.html
+++ b/vera-website/index.html
@@ -92,7 +92,7 @@
               Boost your business with cutting-edge software solutions tailored
               to the needs of modern enterprises.
             </p>
-            <a href="#" class="btn btn-primary text-white">Lear More</a>
+            <a href="#" class="btn btn-primary text-white">Learn More</a>
           </div>
         </div>
       </div>
