--- a/corso-website/index.html
+++ b/corso-website/index.html
@@ -7,9 +7,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/font-awesome.css" />
-    <link rel="stylesheet" href="css/bootstrap.css" />
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="/css/font-awesome.css" />
+    <link rel="stylesheet" href="/css/bootstrap.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
     <link rel="icon" href="images/favicon.png" />
     <title>Corso Training</title>
   </head>
@@ -17,7 +17,7 @@
     <nav class="navbar navbar-expand-lg fixed-top navbar-dark">
       <div class="container">
         <a href="index.html" class="navbar-brand">
-          <img src="images/logo.png" alt="" width="150" />
+          <img src="/images/logo.png" alt="" width="150" />
         </a>
         <button
           class="navbar-toggler"
@@ -119,21 +119,21 @@
               <div class="carousel-inner rounded-5">
                 <div class="carousel-item active">
                   <img
-                    src="images/header-slide-1.jpg"
+                    src="/images/header-slide-1.jpg"
                     alt=""
                     class="d-block w-100 rounded-5"
                   />
                 </div>
                 <div class="carousel-item">
                   <img
-                    src="images/header-slide-2.jpg"
+                    src="/images/header-slide-2.jpg"
                     alt=""
                     class="d-block w-100 rounded-5"
                   />
                 </div>
                 <div class="carousel-item">
                   <img
-                    src="images/header-slide-3.jpg"
+                    src="/images/header-slide-3.jpg"
                     alt=""
                     class="d-block w-100 rounded-5"
                   />
@@ -240,7 +240,7 @@
         <div class="row">
           <div class="col-lg-6">
             <img
-              src="images/instructor.jpg"
+              src="/images/instructor.jpg"
               alt=""
               class="img-fluid rounded-5 mb-4"
             />
@@ -424,7 +424,7 @@
         <div class="row">
           <div class="col-lg-6">
             <img
-              src="images/audience.jpg"
+              src="/images/audience.jpg"
               alt=""
               class="img-fluid rounded-5 mb-4"
             />
